# poke-mcp-production

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SSH_TUNNELING.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: index.py
examples/: client_config_claude.json  client_config_stdio.json  ssh_config
scripts/: generate_api_key.py  test_deployment.sh
src/: __init__.py  auth.py  battle_utils.py  config.py  constants.py  logger.py  middleware.py  monitoring.py  pokeapi_client.py
